# tinygl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  INTEGRATION  LICENSE  LIMITATIONS  Makefile  README  README.md  TinyGL.files  TinyGL.includes  config.mk
.github/workflows/: codeql-buildscript.sh  codeql.yml
Raw_Demos/: CMakeLists.txt  Makefile  asciifractal.sh  bigfont.c  gears  gears.c  stringutil.h  t2i.c
Raw_Demos/include/: 3dMath.h
SDL_Examples/: .clang-format  CMakeLists.txt  Makefile  code_format.sh  game.c  gears  gears.c  helloworld  helloworld.c  menu  menu.c  model  model.c  quick.sh  stdout.txt  texture  texture.c
SDL_Examples/include/: 3dMath.h  chadphys.h  lockstepthread.h  openimgui.h  resweep.h  stb_image.h  stringutil.h  tobjparse.h
include/: CMakeLists.txt  zbuffer.h  zfeatures.h  zfeatures.h.gch
include-demo/: 3dMath.h  api_audio.h  chade.h  chadphys.h  openimgui.h  resweep.h  stb_image.h  stb_image_write.h  stringutil.h  tobjparse.h
include/GL/: gl.h  nglx_unused.h
include/TGL/: gl.h
lib/: keep_alive.txt
src/: CMakeLists.txt  LICENSE  LIMITATIONS  Makefile  Makefile_Backup  accum.c  api.c  arrays.c  clear.c  clip.c  code_format.sh  config.mk  error.c  error_check.h  error_check_no_context.h  font8x8_basic.h  get.c  image_util.c  init.c  light.c  list.c  matrix.c  memory.c  misc.c  msghandling.c  msghandling.h  opinfo.h  oscontext.c  quick.sh  select.c  specbuf.c  specbuf.h  texture.c  vertex.c  zbuffer.c  zbuffer.h  zdither.c  zfeatures.h  zgl.h  zgl.h.gch  (+11 more)
src/SDL_Examples/: Makefile  gears.c  model.c  texture.c
src/SDL_Examples/include/: 3dMath.h  api_audio.h
src/include/: 3dMath.h  GLView.h  tobjparse.h
src/include/GL/: gl.h  glx.h
